--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 $primary: #fa9000;
 $black: #000000;
 $secondary: #333333;
@@ -9,7 +9,7 @@ $first-font: 2rem;
 $second-font: 1.5rem;
 $third-font: 1.2rem;
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 a {
   color: $black !important;
@@ -23,7 +23,7 @@ a.text-primary:hover {
   box-shadow: 0 2px 4px -4px rgba(0, 0, 0, 0.5);
 }
 .title-dot::after {
-  content: ' ';
+  content: " ";
   display: inline-block;
   width: 0.5rem;
   height: 0.5rem;
@@ -226,7 +226,7 @@ a.text-primary:hover {
       position: relative;
     }
     .photo-gallery-img::after {
-      content: ' ';
+      content: " ";
       display: block;
       position: absolute;
       left: 1.2rem;
@@ -286,7 +286,7 @@ a.text-primary:hover {
       top: 26rem;
     }
     h2::before {
-      content: ' ';
+      content: " ";
       display: inline-block;
       width: 0.7rem;
       height: 2rem;
@@ -312,7 +312,7 @@ a.text-primary:hover {
       position: relative;
     }
     .slider-only-header::before {
-      content: ' ';
+      content: " ";
       position: absolute;
       width: 1rem;
       height: 2rem;
@@ -479,7 +479,7 @@ a.text-primary:hover {
     color: #626262;
   }
   p {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: "Times New Roman", Times, serif;
     font-size: 1.2rem;
     font-weight: 400;
   }
@@ -553,7 +553,7 @@ a.text-primary:hover {
       }
     }
     .more-post-article::before {
-      content: ' ';
+      content: " ";
       width: 0.5rem;
       height: 0.5rem;
       background-color: $primary;
@@ -585,7 +585,7 @@ a.text-primary:hover {
         font-weight: 700;
       }
       p {
-        font-family: 'Times New Roman', Times, serif;
+        font-family: "Times New Roman", Times, serif;
       }
     }
   }
@@ -625,22 +625,25 @@ a.text-primary:hover {
     border: 1px $primary solid;
     border-radius: 0px !important;
     margin-top: 0px !important;
-    .dropdown-item:hover {
+    &:hover {
       background-color: rgba(0, 0, 0, 0) !important;
     }
   }
   .main-feature-post-img {
     position: relative;
-  }
-  .main-feature-post-img::after {
-    content: ' ';
-    display: block;
-    position: absolute;
-    left: 1.2rem;
-    top: 97%;
-    width: 10rem;
-    height: 1.25rem;
-    background-color: $primary;
+    &::after {
+      content: " ";
+      display: block;
+      position: absolute;
+      left: 1.2rem;
+      top: 97%;
+      width: 10rem;
+      height: 1.25rem;
+      background-color: $primary;
+    }
+    .feature-post-header {
+      font-size: 1.5rem;
+    }
   }
 }
 @media (max-width: 1140px) {
@@ -664,7 +667,7 @@ a.text-primary:hover {
     padding-left: 0.5rem !important;
   }
   .title-bar::before {
-    content: ' ';
+    content: " ";
     width: 1rem;
     height: 7rem;
     background-color: $primary;
@@ -723,8 +726,29 @@ a.text-primary:hover {
     }
   }
 }
-.slick-next::before,
-.slick-prev::before {
-  color: $black !important;
-  font-size: 2rem !important;
+
+.prev_arrow {
+  font-size: 5rem;
+  cursor: pointer;
+  position: absolute;
+  left: -6%;
+  top: 25%;
+  opacity: 0.2;
+  text-align: center;
+  .fas {
+    color: #575757 !important;
+  }
+}
+.next_arrow {
+  font-size: 5rem;
+  cursor: pointer;
+  position: absolute;
+  right: -6%;
+  top: 25%;
+
+  opacity: 0.2;
+  text-align: center;
+  .fas {
+    color: #575757 !important;
+  }
 }
